Cambios en la pagina web

--- a/BOOTSTRAP/Actividad BOOTSRAP.html
+++ b/BOOTSTRAP/Actividad BOOTSRAP.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="description" content="Claudio Bessone">
         <meta charset="UTF-8">
-        <title>PRESENTACIÓN BESSONE</title>
+        <title>BESSONE Y EL CS GO</title>
         <link rel="stylesheet" href="estilos.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -35,27 +35,85 @@
         </header>
         <br>
         <main>
-            <h1 align="center"><u>CLAUDIO BESSONE</u></h1>
-            <div id="imgInicio" style="float:inline-start">
-                <img src="fotoTeo.jpg" width="300" height="200"></img>
+            <h1 align="center"><u>CLAUDIO BESSONE - CS GO</u></h1>
+            <div id="imgInicio">
+                <img src="csgo1.png" width="300" height="200"></img>
                 <img src="cs.jpg" width="300" height="300"></img>
+                <img src="csgo2.jpg" width="300" height="200"></img>
+                <img src="csgo3.png" width="300" height="200"></img>
+                <img src="csgo4.png" width="300" height="200"></img>
+                <img src="csgo5.png" width="300" height="200"></img>
             </div>
-            <div>
+            <div id="infoInicio">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores omnis optio nesciunt
-                     debitis quisquam vel dignissimos unde veniam, fugiat sapiente nostrum aspernatur, tempora
-                      tenetur, pariatur repellendus cupiditate quam. Tempore, nobis.
+                    Buenas a todos, me llamo Claudio Bessone, suelo jugar CS GO desde hace mucho tiempo. Me parecio armar 
+                    una pagina sobre información mia y del juego de PC que más me gusta y que actualmente estoy jugando.
+                    De mi parte me parece un muy buen juego, de muy bueno graficos y recomendable. A continuación brindo
+                    una descripcion del juego a modo de Información:
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam magnam, voluptate quisquam 
-                    aliquid debitis delectus error animi, excepturi sint eveniet soluta necessitatibus autem.
-                     Eaque natus assumenda dolorum quaerat aspernatur. Debitis.
+                    <strong>Global Offensive (CS:GO)</strong>  es un videojuego de disparos en primera persona desarrollado
+                    por Valve Corporation en cooperación con Hidden Path Entertainment, y es el cuarto juego de la saga
+                    Counter-Strike, sin contar Counter-Strike: Online. Fue lanzado al mercado el 21 de agosto de 2012 
+                    para las plataformas de Microsoft Windows, Mac OS X y Xbox 360, mientras que sufrió un retraso en
+                    PlayStation 3.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam magnam, voluptate quisquam 
-                    aliquid debitis delectus error animi, excepturi sint eveniet soluta necessitatibus autem.
-                     Eaque natus assumenda dolorum quaerat aspernatur. Debitis.
+                    Global Offensive dispuso de una beta accesible únicamente mediante invitación en Steam,
+                    en su momento la revista PC Gamer anunció que el videojuego sería lanzado oficialmente
+                    el 21 de agosto de 2012 a un precio de € 10,991​2​, aunque ahora es gratuito. Gracias a
+                    esto, su base de jugadores aumentó de 20 a 45 millones, haciendo que retomara su lugar
+                    dentro de los juegos más jugados de los últimos años. 
                 </p>
+                <h5><u>Armas del CS GO</u></h3>
+                    <table class="tableArmas">
+                        <thead align="center">
+                            <tr>
+                                <th>Tipo de Arma</th>
+                                <th>Armas</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td align="center">Pistolas</td>
+                                <td align="center"><ul>P2000</ul>
+                                    <ul>Glock-18</ul>
+                                    <ul>P250</ul>
+                                    <ul>Five-SeveN</ul>
+                                    <ul>Berettas Dobles</ul>
+                                    <ul>Tec-9</ul>
+                                    <ul>Desert Eagle</ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">Armas Pesadas</td>
+                                <td align="center"><ul>Nova</ul>
+                                    <ul>XM1014</ul>
+                                    <ul>MAG-7</ul>
+                                    <ul>Recortada</ul>
+                                    <ul>M249</ul>
+                                    <ul>Negev</ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">Subfusiles</td>
+                                <td align="center"><ul>MAC-10</ul>
+                                    <ul>MP9 - MP7</ul>
+                                    <ul>UMP-45</ul>
+                                    <ul>P90</ul>
+                                    <ul>PP-BIZON</ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">Fusiles de asalto y de francotirador</td>
+                                <td align="center"><ul>Galil AR</ul>
+                                    <ul>AK-47</ul>
+                                    <ul>FAMAS</ul>
+                                    <ul>SG 553 - AUG</ul>
+                                    <ul>AWP</ul>
+                                    <ul>M4A4</ul>
+                                </td>
+                            </tr>
             </div>
             
         </main>
