--- a/BOOTSTRAP/Contacto.html
+++ b/BOOTSTRAP/Contacto.html
@@ -50,9 +50,14 @@
 
                 <!-- Mensaje -->
                 <input type="text" id="mensajeEnviar" class="form-control mb-4" placeholder="Escriba su mensaje aqui" required="">
+                <div class="buttonsMensaje">
+                    <!-- Cancelar in button -->
+                    <button class="btn btn-danger" type="" style="width: 200px; height: 50px;" >Cancelar</button>
 
-                <!-- Enviar in button -->
-                <button class="btn btn-info btn-block my-4" type="submit">Enviar Mensaje</button>
+                    <!-- Enviar in button -->
+                    <button class="btn btn-success" type="submit" style="width: 200px; height: 50px;">Enviar Mensaje</button>
+                </div>
+                
 
                 <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
                 <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
