--- a/BOOTSTRAP/InfoPersonal.html
+++ b/BOOTSTRAP/InfoPersonal.html
@@ -37,7 +37,7 @@
             <br>
             <br>
             <h1 align="center"><u>INFORMACIÓN PERSONAL DE CLAUDIO BESSONE</u></h1>
-            <table align="center">
+            <table align="center" class="tableInfo">
                 <thead>
                     <tr>
                         <th>Datos</th>
