Cambios en la pagina Web

--- a/BOOTSTRAP/Contacto.html
+++ b/BOOTSTRAP/Contacto.html
@@ -46,10 +46,11 @@
                 <!--Apellido-->
                 <input type="text" id="apellido" class="form-control mb-4" placeholder="Apellido" required="">
                 <!-- Email -->
-                <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" required="">
+                <input type="email" class="form-control mb-4" placeholder="Email"id="email">
 
                 <!-- Mensaje -->
                 <input type="text" id="mensajeEnviar" class="form-control mb-4" placeholder="Escriba su mensaje aqui" required="">
+                
                 <div class="buttonsMensaje">
                     <!-- Cancelar in button -->
                     <button class="btn btn-danger" type="" style="width: 200px; height: 50px;" >Cancelar</button>
