--- a/BOOTSTRAP/Actividad BOOTSRAP.html
+++ b/BOOTSTRAP/Actividad BOOTSRAP.html
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Contacto.html">Formulario de Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Adivinanza.html">Adivinanza</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
