--- a/BOOTSTRAP/InfoPersonal.html
+++ b/BOOTSTRAP/InfoPersonal.html
@@ -29,12 +29,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Contacto.html">Formulario de Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Adivinanza.html">Adivinanza</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
         </header>
         <main>
-            <br>
             <br>
             <h1 align="center"><u>INFORMACIÓN PERSONAL DE CLAUDIO BESSONE</u></h1>
             <table align="center" class="tableInfo">
