Agrego funcionalidad de adivinanza

--- a/BOOTSTRAP/Actividad BOOTSRAP.html
+++ b/BOOTSTRAP/Actividad BOOTSRAP.html
@@ -108,7 +108,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td align="center">Fusiles de asalto y de francotirador</td>
+                                <td align="center">Fusiles de asalto</td>
                                 <td align="center"><ul>Galil AR</ul>
                                     <ul>AK-47</ul>
                                     <ul>FAMAS</ul>
