--- a/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
@@ -78,7 +78,7 @@
                 respuesta = document.getElementById("respuestas").value;
                 if(document.getElementById("respuestas").value == "pistola")
                 {
-                    alert("respuesta correcta");
+                    alert("respuesta correcta - PISTOLA");
                     actualizar();
                 }
                 else
