--- a/Pagina-FrontEnd - Plantilla Bootstrap/contacto.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/contacto.html
@@ -65,14 +65,14 @@
                 <p class="h4 mb-4">COMPLETE LOS SIGUIENTES CAMPOS</p>
                 
                 <!--Nombre-->
-                <input type="text" id="nombre" class="form-control mb-4" placeholder="Nombre">
+                <input type="text" id="nombre" class="form-control mb-4" placeholder="Nombre" required="">
                 <!--Apellido-->
-                <input type="text" id="apellido" class="form-control mb-4" placeholder="Apellido">
+                <input type="text" id="apellido" class="form-control mb-4" placeholder="Apellido" required="">
                 <!-- Email -->
                 <input type="email" class="form-control mb-4" placeholder="Email"id="email">
 
                 <!-- Mensaje -->
-                <input type="text" id="mensajeEnviar" class="form-control mb-4" placeholder="Escriba su mensaje aqui">
+                <input type="text" id="mensajeEnviar" class="form-control mb-4" placeholder="Escriba su mensaje aqui" required="">
                 
                 <div class="buttonsMensaje">
                     <!-- Cancelar in button -->
