--- a/Pagina-FrontEnd - Plantilla Bootstrap/acerca de mi.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/acerca de mi.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="header">
-
+            <!--Barra de navegación-->
             <div class="header-wrap">
 
                 <div class="logo plain logo-left">
@@ -60,6 +60,7 @@
             <h1 align="center"><u>INFORMACIÓN PERSONAL DE CLAUDIO BESSONE</u></h1>
             <br>
             <br>
+            <!--Tabla con la información personal-->
             <table align="center" class="tableInfo">
                 <thead>
                     <tr>
