--- a/Pagina-FrontEnd - Plantilla Bootstrap/infoJuego.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/infoJuego.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="header">
-
+            <!--Barra de navegación-->
             <div class="header-wrap">
 
                 <div class="logo plain logo-left">
@@ -60,6 +60,7 @@
             <h1 align="center"><u>INFORMACIÓN DEL JUEGO</u></h1>
             <br>
             <br>
+            <!--Imagenes insertadas debajo del titulo-->
             <div id="imgInicio">
                 <img src="images/csgo1.png" width="300" height="200"></img>
                 <img src="images/csgo2.jpg" width="300" height="300"></img>
@@ -70,6 +71,7 @@
                 <img src="images/cs.jpg" width="300" height="200"></img>
                 <img src="images/csgo7.jpg" width="300" height="200"></img>
             </div>
+            <!--Texto a modo de información-->
             <div id="infoInicio">
                 <p>
                     <strong>Global Offensive (CS:GO)</strong>  es un videojuego de disparos en primera persona desarrollado
@@ -86,6 +88,7 @@
                     dentro de los juegos más jugados de los últimos años. 
                 </p>
                 <h5 style="margin: 10px;"><u>Armas del CS GO</u></h3>
+                    <!--Tabla con los tipos de armas-->
                     <table class="tableArmas">
                         <thead>
                             <tr>
