--- a/Pagina-FrontEnd - Plantilla Bootstrap/principal.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/principal.html
@@ -16,7 +16,7 @@
     <body class="home sticky-menu sidebar-off" id="top">
 
         <header class="header">
-
+            <!--Barra de navegación-->
             <div class="header-wrap">
 
                 <div class="logo plain logo-left">
@@ -58,7 +58,7 @@
                 <a href="#nav" class="menu-trigger"><i class="fa fa-bars"></i></a>
             </div>
         </header>
-
+        <!--Imagen de fondo-->
         <div class="hero" style="background-image: url('images/csgo2.jpg'); text-align:right;">
         </div>
         <script>var ie9 = false;</script>
