--- a/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="header">
-
+            <!--Barra de navegación-->
             <div class="header-wrap">
 
                 <div class="logo plain logo-left">
@@ -58,6 +58,7 @@
         <h1 align="center"><u>ADIVINANZA SOBRE EL TEMA DEL SITIO...</u></h1>
         <main>
             <br>
+            <!--Pregunta de adivinanza-->
             <div class="adivinanza">
                 <h3>Las BERETTAS DOBLES. ¿Qué tipo de armas es?</h3>
                 <br>
@@ -65,6 +66,7 @@
                 <input type="text" id="respuestas" onclick="javascript: limpiar(this);" class="form-control mb-4" placeholder="Respuesta" style="width: 150px;">
                 <br>
                 <br>
+                <!--Texto que indica la cantidad de intentos disponibles-->
                 <label id="cantidadIntentos">4 intentos disponibles</label>
                 <br>
                 <br>
@@ -72,6 +74,7 @@
                 <button class="btn btn-primary" id="ButtonResponder" type="submit" style="width: 200px; height: 50px;" onclick="Verificar()">Responder</button>
             </div>
         </main>
+        <!--Codigo Javascript que se inserta en la pagina-->
         <script>
             function Verificar(){
                 cantidadIntento = document.getElementById("cantidadIntentos").innerHTML;
