--- a/Pagina-FrontEnd - Plantilla Bootstrap/acerca de mi.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/acerca de mi.html
@@ -20,7 +20,7 @@
 
                 <div class="logo plain logo-left">
                     <div class="site-title">
-                        <a href="principal.html" title="Go to Home">Acerca de mi</a>
+                        <a href="acerca de mi.html" title="Go to Home">Acerca de mi</a>
                     </div>
                 </div>
                 <nav id="nav" role="navigation">
@@ -44,7 +44,7 @@
                                         <i class="fa fa-facebook"></i><span class="i">Facebook</span>
                                 </a></li>
                                 <li class="menu-inline menu-item">
-                                    <a title="Instagram" href="#">
+                                    <a title="Instagram" href="https://www.instagram.com/iaio_bessone/?hl=es-la">
                                         <i class="fa fa-instagram"></i><span class="i">Instagram</span>
                                     </a>
                                 </li>
@@ -91,10 +91,18 @@
                         <td align="center"><a href="https://www.google.com/search?q=padel&client=firefox-b-d&sxsrf=ALeKk03e963fWxRphPyk7hQolbEoLIsWbw:1598046918340&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjLo5vXpK3rAhU5HbkGHTexAYUQ_AUoAnoECBsQBA&biw=1366&bih=654#imgrc=Oxi8MjAy9KBCuM">Foto de Deportes</a></td>
                     </tr>
                     </tr></tr>
+                    <aside class="asideAcercaDeMi">
+                        <img src="images/csgo8.png" width="480" height="400"></img>
+                        <br>
+                        <img src="images/csgo9.png" width="480" height="500"></img>
+                    </aside>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="3" ><a href="https://www.facebook.com/iaio.bessone">Perfil de Facebook</a></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" ><a href="https://github.com/IaioBessone/Programa-CLIP">Enlace a repositorio de GITHUB</a></td>
                     </tr>
                 </tfoot>
             </table>
