--- a/Pagina-FrontEnd - Plantilla Bootstrap/principal.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/principal.html
@@ -47,7 +47,7 @@
                                         <i class="fa fa-facebook"></i><span class="i">Facebook</span>
                                 </a></li>
                                 <li class="menu-inline menu-item">
-                                    <a title="Instagram" href="#">
+                                    <a title="Instagram" href="https://www.instagram.com/iaio_bessone/?hl=es-la">
                                         <i class="fa fa-instagram"></i><span class="i">Instagram</span>
                                     </a>
                                 </li>
