--- a/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
+++ b/Pagina-FrontEnd - Plantilla Bootstrap/adivinanza.html
@@ -20,7 +20,7 @@
 
                 <div class="logo plain logo-left">
                     <div class="site-title">
-                        <a href="principal.html" title="Go to Home">Adivinanza</a>
+                        <a href="adivinanza.html" title="Go to Home">Adivinanza</a>
                     </div>
                 </div>
                 <nav id="nav" role="navigation">
@@ -44,7 +44,7 @@
                                         <i class="fa fa-facebook"></i><span class="i">Facebook</span>
                                 </a></li>
                                 <li class="menu-inline menu-item">
-                                    <a title="Instagram" href="#">
+                                    <a title="Instagram" href="https://www.instagram.com/iaio_bessone/?hl=es-la">
                                         <i class="fa fa-instagram"></i><span class="i">Instagram</span>
                                     </a>
                                 </li>
